--- a/checkout.html
+++ b/checkout.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="/CSS/css reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet"> 
-  <script type="module" crossorigin src="/I-need-this/assets/main-ZP5wANBm.js"></script>
-  <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-BRgM8i9I.css">
-  <link rel="stylesheet" crossorigin href="/I-need-this/assets/checkout-ZDXWH8aK.css">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet"> 
+  <script type="module" crossorigin src="/I-need-this/assets/main-Cw3RE5Ct.js"></script>
+  <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CR-PL4lk.css">
+  <link rel="stylesheet" crossorigin href="/I-need-this/assets/checkout-BgDRHHeK.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg py-0 shadow-sm">
   <div class="container d-flex align-items-center ">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
-      <img src="/I-need-this/assets/logo_on%20light-CbsW53Vv.svg" alt="logo">
+      <img src="/I-need-this/assets/logo_on%20light-BOaolgl4.svg" alt="logo">
     </a>
 
     <!-- 右側內容 -->
@@ -130,7 +130,7 @@ menuToggle.addEventListener("click", () => {
 });
 </script>
   <!-- 頁首 -->
-  <main class=" checkout-container checkout-px-12 text-sans">
+  <main class="checkout-container checkout-px-12 checkout-mt-72 text-sans">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
     // 找到所有數量控制容器
@@ -195,7 +195,7 @@ menuToggle.addEventListener("click", () => {
                 <input type="text" value="1" class="quantity-input tm">
                 <button class="plus-btn icon-center p-16"><img src="data:image/svg+xml,%3csvg%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M19%2013H13V19H11V13H5V11H11V5H13V11H19V13Z'%20fill='%231E1E1E'/%3e%3c/svg%3e" alt="加號"></button>
               </div>
-              <div class="d-flex justify-space-between h6 media-mb-16"><div class="hide">總計</div>NT$ 1,197</div>
+              <div class="d-flex justify-space-between checkout-h6 media-mb-16"><div class="hide">總計</div>NT$ 1,197</div>
             </div>
           </span>
           <!-- 靜夜語商品資訊 -->
@@ -215,7 +215,7 @@ menuToggle.addEventListener("click", () => {
                 <input type="text" value="1" class="quantity-input tm">
                 <button class="plus-btn icon-center p-16"><img src="data:image/svg+xml,%3csvg%20width='24'%20height='24'%20viewBox='0%200%2024%2024'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M19%2013H13V19H11V13H5V11H11V5H13V11H19V13Z'%20fill='%231E1E1E'/%3e%3c/svg%3e" alt="加號"></button>
               </div>
-              <div class="d-flex justify-space-between h6 media-mb-16">
+              <div class="d-flex justify-space-between checkout-h6 media-mb-16">
                 <div class="hide">總計</div>
                 <div>NT$ 599</div>
               </div>
@@ -229,7 +229,7 @@ menuToggle.addEventListener("click", () => {
         <div class="mb-32 media-mb-16">
           <h2 class="checkout-py-8 pl-16 bg-color text-serif">選擇送貨及付款方式</h2>
         </div>
-        <div class="h7 mb-8">送貨方式</div>
+        <div class="h7 checkout-mb-8">送貨方式</div>
         <div class="form-group mb-32 media-mb-16">
             <select id="shipping-method" class="tm text-neuture-80 custom-select">
                 <option value="store-pickup">超商取貨</option>
@@ -237,7 +237,7 @@ menuToggle.addEventListener("click", () => {
                 <option value="express">快速到貨</option>
             </select>
         </div>
-        <div class="h7 mb-8">付款方式</div>
+        <div class="h7 checkout-mb-8">付款方式</div>
         <div class="form-group">
             <select id="shipping-method" class="tm text-neuture-80 custom-select">
                 <option value="credit-card">信用卡付款</option>
@@ -259,7 +259,7 @@ menuToggle.addEventListener("click", () => {
           </ul>
           <ul class="d-flex justify-between mb-16 ul">
             <li class="tm text-neuture-60">應付金額</li>
-            <li class="h4 media-h4">NT$ 1,856</li>
+            <li class="media-h4 text-sans">NT$ 1,856</li>
           </ul>
         </div>
       </div>
@@ -289,7 +289,7 @@ menuToggle.addEventListener("click", () => {
             class="d-lg-flex align-items-center mb-3 link-dark text-decoration-none pt-10 mb-8"
           >
             <img
-              src="/I-need-this/assets/logo_on%20dark-mQi5lKma.svg"
+              src="/I-need-this/assets/logo_on%20dark-CkVlHNz7.svg"
               alt="logo_on dark"
               class="d-inline-block align-text-top"
             />
@@ -375,6 +375,6 @@ menuToggle.addEventListener("click", () => {
       B-9 © 2025 All Rights Reserved
     </p>
   </div>
-</footer>
+</footer>
 </body>
 </html>
