--- a/product-detail.html
+++ b/product-detail.html
@@ -3,34 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link
+      rel="stylesheet"
+      href="../assets/scss/base/_base.scss">
+<link
+      rel="stylesheet"
+      href="..//helpers._utils-2.scss">
+
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Noto+Serif+TC&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link
       href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic" crossorigin />
     
-    <title>商品細節｜I need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-ZP5wANBm.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-BRgM8i9I.css">
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/product-detail-D0fh3uF9.css">
+    <title>商品細節｜I need this</title>
+    <script type="module" crossorigin src="/I-need-this/assets/main-Cw3RE5Ct.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CR-PL4lk.css">
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/product-detail-C4BHliQA.css">
   </head>
+  
   <body>
     <nav class="navbar navbar-expand-lg py-0 shadow-sm">
   <div class="container d-flex align-items-center ">
     <!-- Logo -->
     <a class="navbar-brand py-4" href="index.html">
-      <img src="/I-need-this/assets/logo_on%20light-CbsW53Vv.svg" alt="logo">
+      <img src="/I-need-this/assets/logo_on%20light-BOaolgl4.svg" alt="logo">
     </a>
 
     <!-- 右側內容 -->
@@ -143,7 +147,7 @@ menuToggle.addEventListener("click", () => {
 </script>
 
 
-    <div class="container py-md-16 mt-3 mb-8">
+    <div class="container py-md-16">
       <nav class="pt-40">
         <ol class="d-flex">
           <li class="breadcrumb-item">
@@ -156,7 +160,7 @@ menuToggle.addEventListener("click", () => {
             <a href="#" class="text-neutral-40 ">精油薰香</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="#" class="text-primary-dark"
+            <a href="product-detail.html" class="text-primary-dark"
               >「森呼吸」純植薰香精油瓶｜沉靜森調Ｘ居家療癒感</a
             >
           </li>
@@ -190,7 +194,7 @@ menuToggle.addEventListener("click", () => {
         </div>
         <div class="col-lg-6 col-md-4">
           <div class="mb-32 py-md-16">
-            <h1 class="h2 mb-20 py-8 border-b-neutral-20 ">
+            <h1 class="h2 mb-20 py-8 border-b-neutral-20">
               「森呼吸」純植薰香精油瓶｜沉靜森調Ｘ居家療癒感
             </h1>
             <p class="h5 mb-40">NT$599</p>
@@ -253,7 +257,7 @@ menuToggle.addEventListener("click", () => {
       </div>
 
       <ul
-        class="d-flex justify-around align-center py-16 mb-40 fwn-md o-x-scroll-md mt-8"
+        class="d-flex justify-around align-center py-16 mb-40 fwn-md o-x-scroll-md"
       >
         <li class="tab-item active">
           <a href="#">
@@ -302,7 +306,7 @@ menuToggle.addEventListener("click", () => {
           <ul>
             <li class="mb-40 product-info-item">
               <p class="text-primary-100">＃一開門就想到的味道</p>
-              <h4 class="py-3 product-info-title">
+              <h4 class="py-12 product-info-title">
                 你有多久，沒有好好深呼吸？
               </h4>
               <p class="text-neutral-60">
@@ -312,13 +316,13 @@ menuToggle.addEventListener("click", () => {
             </li>
             <li class="mb-40">
               <img
-                src="/I-need-this/assets/graphic-07-BRrJFDQt.svg"
+                src="/I-need-this/assets/graphic-07-B6iIaSR6.svg"
                 style="width: 96px; height: 16px"
                 alt="分隔線"
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-3 product-info-title">
+              <h4 class="py-12 product-info-title">
                 🏡 居家儀式感，從味道開始
               </h4>
               <p class="text-neutral-60">
@@ -327,13 +331,13 @@ menuToggle.addEventListener("click", () => {
             </li>
             <li class="mb-40">
               <img
-                src="/I-need-this/assets/graphic-07-BRrJFDQt.svg"
+                src="/I-need-this/assets/graphic-07-B6iIaSR6.svg"
                 style="width: 96px; height: 16px"
                 alt="分隔線"
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-3 product-info-title">內含配方</h4>
+              <h4 class="py-12 product-info-title">內含配方</h4>
               <p class="text-neutral-60">三種無添加的天然精油：</p>
               <ul class="text-neutral-60 ps-3">
                 <li>· 檜木：穩定情緒，帶來大地木質調</li>
@@ -346,18 +350,18 @@ menuToggle.addEventListener("click", () => {
             </li>
           </ul>
         </div>
-        <div class="col-lg-5 col-md-4">
-          <div class="bgc-green p-6 mb-md-32" style="background-color: #F6F9EB;">
-            <h3 class="h5 mb-16 mb-4">規格說明（範例）</h3>
-            <div class="border-b-neutral-40  mb-16"></div>
+        <div class="col-5 col-md-4">
+          <div class="bgc-green p-24 mb-md-32">
+            <h3 class="h5 mb-16">規格說明（範例）</h3>
+            <div class="border-b-neutral-40 mb-16"></div>
             <ul class="text-primary-dark">
-              <li class="mb-16 mt-4 mb-4">
+              <li class="mb-16">
                 容量：<span class="bold">10ml / 20ml 滴瓶裝</span>
               </li>
-              <li class="mb-16 mb-4">
+              <li class="mb-16">
                 用法：<span class="bold">搭配擴香石、水氧機或手帕滴香使用</span>
               </li>
-              <li class="mb-16 mb-4">
+              <li class="mb-16">
                 保存期限：<span class="bold">三年，建議半年內使用完最佳</span>
               </li>
               <li>
@@ -388,7 +392,7 @@ menuToggle.addEventListener("click", () => {
             class="d-lg-flex align-items-center mb-3 link-dark text-decoration-none pt-10 mb-8"
           >
             <img
-              src="/I-need-this/assets/logo_on%20dark-mQi5lKma.svg"
+              src="/I-need-this/assets/logo_on%20dark-CkVlHNz7.svg"
               alt="logo_on dark"
               class="d-inline-block align-text-top"
             />
@@ -476,6 +480,7 @@ menuToggle.addEventListener("click", () => {
   </div>
 </footer>
 
+
 
   </body>
 </html>
