首頁跑版修改

--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,7 @@
                   <div class="bg-opacity-blur px-4 py-5 py-lg-8 px-lg-7 text-start">
                     <h1 class="h1 white pb-3 pb-lg-5">生活小物的靜謐時光</h1>
                     <p class="h3 pb-6 pb-lg-10">用小物打造專屬的心靈港灣</p>
-                    <button type="button" class="btn btn-pdark d-flex align-items-center">
+                    <button type="button" class="btn-pdark d-flex align-items-center">
                       看看商品
                       <span class="material-icons-outlined">arrow_right</span>
                     </button>
@@ -56,7 +56,7 @@
                   <div class="bg-opacity-blur px-4 py-5 py-lg-8 px-lg-7 text-start">
                     <h1 class="h1 white pb-3 pb-lg-5">仲夏香氛特調節</h1>
                     <p class="h3 pb-6 pb-lg-10">特調仲夏香氛，沈浸自然的清涼氣息</p>
-                    <button type="button" class="btn btn-pdark d-flex align-items-center">
+                    <button type="button" class="btn-pdark d-flex align-items-center">
                       看看商品
                       <span class="material-icons-outlined" style="font-size: 24px; width: 24px; height: 24px;">arrow_right</span>
                     </button>
@@ -77,7 +77,7 @@
                   <div class="bg-opacity-blur px-4 py-5 py-lg-8 px-lg-7 text-start">
                     <h1 class="h1 white pb-3 pb-lg-5">來自大自然的香氣防護</h1>
                     <p class="h3 pb-6 pb-lg-10">純植物精油，無化學添加，適合全家大小使用</p>
-                    <button type="button" class="btn btn-pdark d-flex align-items-center">
+                    <button type="button" class="btn-pdark d-flex align-items-center">
                       看看商品
                       <span class="material-icons-outlined" style="font-size: 24px; width: 24px; height: 24px;">arrow_right</span>
                     </button>
@@ -155,7 +155,7 @@
       <h2 class="h2 mb-4">默默熱賣中</h2>
       <p class="text-n-60 mb-5">用過的人都不想換回去的東西</p>
       <div class="row py-lg-10 overflow-x-auto flex-nowrap">
-        <div class="col-lg-3 col-9">
+        <div class="col-3 col-md-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-04.jpg" class="card-img-top" alt="...">
@@ -166,18 +166,18 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-9">
+        <div class="col-3 col-md-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-03.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="h5 mb-2 text-n-80">擴香瓶</h5>
-                <p class="card-text text-p-dark">「用點燃，就能為家帶來溫柔香氣。」不</p>
+                <p class="card-text text-p-dark">「不用點燃，就能為家帶來溫柔香氣。」</p>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-9">
+        <div class="col-3 col-md-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-02.jpg" class="card-img-top" alt="...">
@@ -188,7 +188,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-9">
+        <div class="col-3 col-md-9">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-01.jpg" class="card-img-top" alt="...">
@@ -208,7 +208,7 @@
 <section class="container-fluid p-0">
   <div class="d-flex flex-wrap">
     <!-- 圖片 1 -->
-    <div class="img-box col-12 col-md-6 p-0">
+    <div class="img-box col-md-12 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-04.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -216,13 +216,13 @@
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center ">
           <h3 class="title-box h4 pb-6 text-white">日常療癒・文青系</h3>
-          <button class="btn btn-white">看看商品</button>
+          <button class="btn-white">看看商品</button>
         </div>
       </div>
     </div>
 
     <!-- 圖片 2 -->
-    <div class="img-box col-12 col-md-6 p-0">
+    <div class="img-box col-md-12 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-03.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -230,13 +230,13 @@
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center">
           <h3 class="title-box h4 pb-6 text-white">俐落品味・都會控</h3>
-          <button class="btn btn-white">看看商品</button>
+          <button class="btn-white">看看商品</button>
         </div>
       </div>
     </div>
 
     <!-- 圖片 3 -->
-    <div class="img-box col-12 col-md-6 p-0">
+    <div class="img-box col-md-12 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-02.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -244,13 +244,13 @@
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center">
           <h3 class="title-box h4 pb-6 text-white">純粹自然・健康派</h3>
-          <button class="btn btn-white">看看商品</button>
+          <button class="btn-white">看看商品</button>
         </div>
       </div>
     </div>
 
     <!-- 圖片 4 -->
-    <div class="img-box col-12 col-md-6 p-0">
+    <div class="img-box col-md-12 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-01.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -258,7 +258,7 @@
         <!-- 遮罩標題按鈕 -->
         <div class="overlay d-flex flex-column justify-content-center align-items-center">
           <h3 class="title-box h4 pb-6 text-white">溫暖幸福・家居族</h3>
-          <button class="btn btn-white">看看商品</button>
+          <button class="btn-white">看看商品</button>
         </div>
       </div>
     </div>
@@ -273,7 +273,7 @@
   <h2 class="h2 mb-6 mb-lg-10">企業責任</h2>
   <div class="row g-2">
     <!-- 環境責任 -->
-    <div class="col-lg-8 col-12 overflow-hidden social-img-box pb-3 expandable-col active">
+    <div class="col-8 col-md-12 overflow-hidden social-img-box pb-3 expandable-col active">
       <img src="../assets/images/slider-02.jpg" alt="" class="crop-img">
       <div class="social-overlay"></div>
       <div class="social-text position-absolute top-0 start-0 w-100 h-100 d-flex flex-column">
@@ -293,7 +293,7 @@
     </div>
 
     <!-- 社會責任 -->
-    <div class="col-lg-2 col-12 overflow-hidden social-img-box pb-3 expandable-col">
+    <div class="col-2 col-md-12 overflow-hidden social-img-box pb-3 expandable-col">
       <img src="../assets/images/slider-03.jpg" alt="" class="crop-img">
       <div class="social-overlay"></div>
       <div class="social-text position-absolute top-0 start-0 w-100 h-100 d-flex flex-column">
@@ -311,7 +311,7 @@
     </div>
 
     <!-- 道德責任 -->
-    <div class="col-lg-2 col-12 overflow-hidden social-img-box pb-3 expandable-col">
+    <div class="col-2 col-md-12 overflow-hidden social-img-box pb-3 expandable-col">
       <img src="../assets/images/slider-01.jpg" alt="" class="crop-img">
       <div class="social-overlay"></div>
       <div class="social-text d-flex flex-column justify-content-between h-100 position-absolute top-0 start-0 w-100">
@@ -350,8 +350,8 @@
         const allCols = document.querySelectorAll('.expandable-col');
 
         allCols.forEach(c => {
-          c.classList.remove('col-lg-8', 'active');
-          c.classList.add('col-lg-2');
+          c.classList.remove('col-8', 'active');
+          c.classList.add('col-2');
 
           // 收合狀態：隱藏展開內容，顯示 collapsed 標題
           c.querySelector('.expanded-content')?.classList.add('d-none');
@@ -359,8 +359,8 @@
         });
 
         // 點擊的展開
-        this.classList.remove('col-lg-2');
-        this.classList.add('col-lg-8', 'active');
+        this.classList.remove('col-2');
+        this.classList.add('col-8', 'active');
 
         // 展開狀態：隱藏 h3，顯示 badge + 內文
         this.querySelector('.expanded-content')?.classList.remove('d-none');
