首頁手機板修改+增加標題字型

--- a/pages/index.html
+++ b/pages/index.html
@@ -114,7 +114,7 @@
           <h2 class="h2 mb-lg-2 mb-1">這個季節<span class="text-p-dark">剛剛好</span></h2>
           <h2 class="h2 mb-lg-7 mb-4">生活選物<span class="text-p-dark">限時提案</span></h2>
           <p class="text-n-60 mb-lg-7 mb-4 fs-sm-tr fs-md-tm">繁忙中也能片刻沉靜，挑一款剛好的香氛，隨時專注於自己的步調。</p>
-          <button type="button" class="btn btn-pdark d-flex align-items-center">
+          <button type="button" class="btn-pdark d-flex align-items-center">
                     看看商品
                     <span class="material-icons-outlined">arrow_right</span>
                   </button>
@@ -138,7 +138,7 @@
         <div class="p-5 p-lg-11 me-3">
           <h2 class="h2 mb-lg-7 mb-4">為日常<span class="text-p-dark">加點新意</span></h2>
           <p class="text-n-60 mb-lg-7 mb-4">用香氣與觸感，輕輕刷新你的生活節奏。　　　　　　</p>
-          <button type="button" class="btn btn-pdark d-flex align-items-center">
+          <button type="button" class="btn-pdark d-flex align-items-center">
                     看看商品
                     <span class="material-icons-outlined">arrow_right</span>
                   </button>
@@ -155,7 +155,7 @@
       <h2 class="h2 mb-4">默默熱賣中</h2>
       <p class="text-n-60 mb-5">用過的人都不想換回去的東西</p>
       <div class="row py-lg-10 overflow-x-auto flex-nowrap">
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-04.jpg" class="card-img-top" alt="...">
@@ -166,7 +166,7 @@
             </div>
           </a>
         </div>
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-03.jpg" class="card-img-top" alt="...">
@@ -177,7 +177,7 @@
             </div>
           </a>
         </div>
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-02.jpg" class="card-img-top" alt="...">
@@ -188,7 +188,7 @@
             </div>
           </a>
         </div>
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="../assets/images/product-img-01.jpg" class="card-img-top" alt="...">
@@ -208,7 +208,7 @@
 <section class="container-fluid p-0">
   <div class="d-flex flex-wrap">
     <!-- 圖片 1 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-04.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -222,7 +222,7 @@
     </div>
 
     <!-- 圖片 2 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-03.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -236,7 +236,7 @@
     </div>
 
     <!-- 圖片 3 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-02.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -250,7 +250,7 @@
     </div>
 
     <!-- 圖片 4 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="../assets/images/category-01.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
