--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- 引入 Material Outlined -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <title>i need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-Drjcn1YW.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-CrZw0IGw.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-DA21UVes.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-Md6bhtbK.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg py-0 shadow-sm">
@@ -230,7 +230,7 @@ menuToggle.addEventListener("click", () => {
           <h2 class="h2 mb-lg-2 mb-1">這個季節<span class="text-p-dark">剛剛好</span></h2>
           <h2 class="h2 mb-lg-7 mb-4">生活選物<span class="text-p-dark">限時提案</span></h2>
           <p class="text-n-60 mb-lg-7 mb-4 fs-sm-tr fs-md-tm">繁忙中也能片刻沉靜，挑一款剛好的香氛，隨時專注於自己的步調。</p>
-          <button type="button" class="btn btn-pdark d-flex align-items-center">
+          <button type="button" class="btn-pdark d-flex align-items-center">
                     看看商品
                     <span class="material-icons-outlined">arrow_right</span>
                   </button>
@@ -254,7 +254,7 @@ menuToggle.addEventListener("click", () => {
         <div class="p-5 p-lg-11 me-3">
           <h2 class="h2 mb-lg-7 mb-4">為日常<span class="text-p-dark">加點新意</span></h2>
           <p class="text-n-60 mb-lg-7 mb-4">用香氣與觸感，輕輕刷新你的生活節奏。　　　　　　</p>
-          <button type="button" class="btn btn-pdark d-flex align-items-center">
+          <button type="button" class="btn-pdark d-flex align-items-center">
                     看看商品
                     <span class="material-icons-outlined">arrow_right</span>
                   </button>
@@ -271,7 +271,7 @@ menuToggle.addEventListener("click", () => {
       <h2 class="h2 mb-4">默默熱賣中</h2>
       <p class="text-n-60 mb-5">用過的人都不想換回去的東西</p>
       <div class="row py-lg-10 overflow-x-auto flex-nowrap">
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="/I-need-this/assets/product-img-04-kY3yPqqL.jpg" class="card-img-top" alt="...">
@@ -282,7 +282,7 @@ menuToggle.addEventListener("click", () => {
             </div>
           </a>
         </div>
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="/I-need-this/assets/product-img-03-DGZxADdb.jpg" class="card-img-top" alt="...">
@@ -293,7 +293,7 @@ menuToggle.addEventListener("click", () => {
             </div>
           </a>
         </div>
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="/I-need-this/assets/product-img-02-BEMY6Ugr.jpg" class="card-img-top" alt="...">
@@ -304,7 +304,7 @@ menuToggle.addEventListener("click", () => {
             </div>
           </a>
         </div>
-        <div class="col-3 col-md-9">
+        <div class="col-3 col-md-3">
           <a href="#" class="sale">
             <div class="card border-0">
               <img src="/I-need-this/assets/product-img-01-CQ5ZF02l.jpg" class="card-img-top" alt="...">
@@ -324,7 +324,7 @@ menuToggle.addEventListener("click", () => {
 <section class="container-fluid p-0">
   <div class="d-flex flex-wrap">
     <!-- 圖片 1 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="/I-need-this/assets/category-04-BVt46E2O.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -338,7 +338,7 @@ menuToggle.addEventListener("click", () => {
     </div>
 
     <!-- 圖片 2 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="/I-need-this/assets/category-03-8BqB78d8.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -352,7 +352,7 @@ menuToggle.addEventListener("click", () => {
     </div>
 
     <!-- 圖片 3 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="/I-need-this/assets/category-02-CSI0SO7s.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
@@ -366,7 +366,7 @@ menuToggle.addEventListener("click", () => {
     </div>
 
     <!-- 圖片 4 -->
-    <div class="img-box col-md-12 col-6 p-0">
+    <div class="img-box col-md-4 col-6 p-0">
       <div class="img-inner">
         <img src="/I-need-this/assets/category-01-FtKLzpKV.png" class="w-100 h-100 object-fit-cover">
         <!-- 內框 -->
