--- a/brand.html
+++ b/brand.html
@@ -23,13 +23,12 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <!-- 引入 Material Outlined -->
     <link
       href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/I-need-this/assets/main-DA21UVes.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-Md6bhtbK.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-Bm04BL7e.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-74syEGu7.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg py-0 shadow-sm">
@@ -149,7 +148,17 @@ menuToggle.addEventListener("click", () => {
 </script>
 
 
-    <div class="main-content-wrapper">
+    <div
+      class="main-content-wrapper"
+      style="
+        position: relative;
+        background-image: url('/I-need-this/assets/bgc-img02-C_EusMld.png');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        padding-bottom: 96px;
+      "
+    >
       <div class="container">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
