商品細節頁調整

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -122,7 +122,7 @@
           <div class="d-flex mb-32 fdc-md">
             <button
               type="button"
-              class="btn btn-dark me-24 mb-md-16 flex-grow-1"
+              class="btn-pdark me-24 mb-md-16 flex-grow-1"
             >
               加入購物車<svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -140,7 +140,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-light text-primary-dark flex-grow-1"
+              class="btn-outline-pdark text-primary-dark flex-grow-1"
             >
               加入收藏<i class="bi bi-heart ms-2"></i>
             </button>
@@ -198,7 +198,7 @@
           <ul>
             <li class="mb-40 product-info-item">
               <p class="text-primary-100">＃一開門就想到的味道</p>
-              <h4 class="py-12 product-info-title">
+              <h4 class="py-3 product-info-title">
                 你有多久，沒有好好深呼吸？
               </h4>
               <p class="text-neutral-60">
@@ -214,7 +214,7 @@
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-12 product-info-title">
+              <h4 class="py-3 product-info-title">
                 🏡 居家儀式感，從味道開始
               </h4>
               <p class="text-neutral-60">
@@ -229,7 +229,7 @@
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-12 product-info-title">內含配方</h4>
+              <h4 class="py-3 product-info-title">內含配方</h4>
               <p class="text-neutral-60">三種無添加的天然精油：</p>
               <ul class="text-neutral-60 ps-3">
                 <li>· 檜木：穩定情緒，帶來大地木質調</li>
@@ -243,7 +243,7 @@
           </ul>
         </div>
         <div class="col-5 col-md-4">
-          <div class="bgc-green p-24 mb-md-32">
+          <div class="capacity-bg p-24 mb-md-32">
             <h3 class="h5 mb-16">規格說明（範例）</h3>
             <div class="border-b-neutral-40 mb-16"></div>
             <ul class="text-primary-dark">
