--- a/product-detail.html
+++ b/product-detail.html
@@ -24,9 +24,9 @@
     <link rel="preconnect" href="https://fonts.gstatic" crossorigin />
     
     <title>商品細節｜I need this</title>
-    <script type="module" crossorigin src="/I-need-this/assets/main-Bm04BL7e.js"></script>
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-74syEGu7.css">
-    <link rel="stylesheet" crossorigin href="/I-need-this/assets/product-detail-C4BHliQA.css">
+    <script type="module" crossorigin src="/I-need-this/assets/main-DPd2gFDr.js"></script>
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-Cj20UkaN.css">
+    <link rel="stylesheet" crossorigin href="/I-need-this/assets/product-detail-DBBZurha.css">
   </head>
   
   <body>
@@ -230,7 +230,7 @@ menuToggle.addEventListener("click", () => {
           <div class="d-flex mb-32 fdc-md">
             <button
               type="button"
-              class="btn btn-dark me-24 mb-md-16 flex-grow-1"
+              class="btn-pdark me-24 mb-md-16 flex-grow-1"
             >
               加入購物車<svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -248,7 +248,7 @@ menuToggle.addEventListener("click", () => {
             </button>
             <button
               type="button"
-              class="btn btn-light text-primary-dark flex-grow-1"
+              class="btn-outline-pdark text-primary-dark flex-grow-1"
             >
               加入收藏<i class="bi bi-heart ms-2"></i>
             </button>
@@ -306,7 +306,7 @@ menuToggle.addEventListener("click", () => {
           <ul>
             <li class="mb-40 product-info-item">
               <p class="text-primary-100">＃一開門就想到的味道</p>
-              <h4 class="py-12 product-info-title">
+              <h4 class="py-3 product-info-title">
                 你有多久，沒有好好深呼吸？
               </h4>
               <p class="text-neutral-60">
@@ -322,7 +322,7 @@ menuToggle.addEventListener("click", () => {
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-12 product-info-title">
+              <h4 class="py-3 product-info-title">
                 🏡 居家儀式感，從味道開始
               </h4>
               <p class="text-neutral-60">
@@ -337,7 +337,7 @@ menuToggle.addEventListener("click", () => {
               />
             </li>
             <li class="mb-40 product-info-item">
-              <h4 class="py-12 product-info-title">內含配方</h4>
+              <h4 class="py-3 product-info-title">內含配方</h4>
               <p class="text-neutral-60">三種無添加的天然精油：</p>
               <ul class="text-neutral-60 ps-3">
                 <li>· 檜木：穩定情緒，帶來大地木質調</li>
@@ -351,7 +351,7 @@ menuToggle.addEventListener("click", () => {
           </ul>
         </div>
         <div class="col-5 col-md-4">
-          <div class="bgc-green p-24 mb-md-32">
+          <div class="capacity-bg p-24 mb-md-32">
             <h3 class="h5 mb-16">規格說明（範例）</h3>
             <div class="border-b-neutral-40 mb-16"></div>
             <ul class="text-primary-dark">
